# schedule-assistant-ai

./: .env.example  .gitignore  CLAUDE.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  error.rs  floating_macos.rs  lib.rs  main.rs  notification.rs  oauth.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(main)/: layout.module.css  layout.tsx
src/app/floating/: floating.module.css  layout.tsx  page.module.css  page.tsx
src/components/: divider.module.css  divider.tsx  icons.module.css  icons.tsx  providers.tsx  sidebar.module.css  sidebar.tsx  tauri-init.tsx  theme-applier.tsx  toast.module.css  toast.tsx  unavailable-content.module.css  unavailable-content.tsx
src/components/Divider/: Divider.tsx
src/components/Providers/: Providers.tsx
src/components/Sidebar/: Sidebar.module.css  Sidebar.tsx
src/hooks/: use-default-calendar.test.ts  use-default-calendar.ts  use-oauth-connection.ts  use-schedule-command.ts  use-todo-actions.ts
src/lib/: api-errors.ts  authenticated-fetch.ts  claude.ts  date-utils.test.ts  date-utils.ts  dev-mock.ts  event-match.test.ts  event-match.ts  floating-window.ts  google-calendar.ts  hotkey.ts  microsoft-todo.ts  notifications.ts  oauth.ts  promise-cache.test.ts  promise-cache.ts  tauri-store.ts  todo-form.test.ts  todo-form.ts
src/store/: auth.ts  chat.ts  events.ts  theme.ts  toast.ts  todos.ts
src/types/: tokens.ts
(+24 files in other folders)
