[package]
name = "schedule-assistant-ai"
version = "0.1.0"
description = "AI 기반 일정 비서"
authors = []
edition = "2021"

[lib]
name = "schedule_assistant_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-oauth = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
